--- a/css/styles.css
+++ b/css/styles.css
@@ -21,4 +21,9 @@ body {
   font-family: "Space Grotesk", sans-serif;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
 /*# sourceMappingURL=styles.css.map */
