--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,9 @@ html {
   font-size: 62.5%;
 }
 
-html,
 body {
-  height: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
 *,
@@ -21,9 +21,43 @@ body {
   font-family: "Space Grotesk", sans-serif;
 }
 
+.bg-mobile {
+  width: 100%;
+  height: auto;
+}
+
 .container {
   display: flex;
   flex-direction: column;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.section-card {
+  color: blue;
+  background-color: red;
+}
+
+.card-back {
+  width: 80%;
+  float: right;
+}
+.card-back__img {
+  width: 100%;
+}
+
+.card-front {
+  width: 80%;
+  float: left;
+}
+.card-front__img {
+  width: 100%;
+}
+
+.section-form {
+  color: red;
+  background-color: blue;
 }
 
 /*# sourceMappingURL=styles.css.map */
